Radial control drawing broken (offseted) #54900

Closed
opened 2018-04-30 17:39:43 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: 868c9ac408
Worked: 868c9ac408f^

Short description of error
WM_OT_radial_control (pressing F when in sculpt mode) is drawn with an offset since the triplebuffer commit.

Exact steps for others to reproduce the error

  • Sculpt mode
  • F

The drawing is in the wrong place (the outer circle of the brush was supposed to be under the mouse.
Note, if you remove header, side panels and maximize the editor the error is gone.

**Blender Version** Broken: 868c9ac408f Worked: 868c9ac408f^ **Short description of error** WM_OT_radial_control (pressing F when in sculpt mode) is drawn with an offset since the triplebuffer commit. **Exact steps for others to reproduce the error** * Sculpt mode * F The drawing is in the wrong place (the outer circle of the brush was supposed to be under the mouse. Note, if you remove header, side panels and maximize the editor the error is gone.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Brecht Van Lommel was assigned by Dalai Felinto 2018-04-30 17:40:07 +02:00
Author
Owner

Note: You can also see this bug when using the grab brush in sculpt.

Note: You can also see this bug when using the grab brush in sculpt.

This issue was referenced by 33bb8b785a

This issue was referenced by 33bb8b785a938da64d55687d50f1a78cd6bbb733

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54900
No description provided.