Fix T54900: radial control drawing in wrong place after recent WM changes.